First try at designing

--- a/CSS/05_coming_soon/coming-soon-landing.html
+++ b/CSS/05_coming_soon/coming-soon-landing.html
@@ -14,7 +14,8 @@
           src="/05_coming_soon/img/converse-removebg-preview.png" class="logo"
           alt="Converse_nightrunners"/>
 
-        <h1>Night Runners Edition Coming Soon</h1>
+        <h1>Coming Soon !</h1>
+        <h2> Night Runners Edition </h2>
         <p>Our team is cooking. Something amazing coming up. Stay tuned</p>
 
         <form id="Notify_form">
